--- a/main.html
+++ b/main.html
@@ -8,6 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name*</label>
+		<input type="text" id="name" placeholder="Name" required>
+		
+		<label for="email">email*</label>
+		<input type="email" placeholder="email" id="email" required>
+		
+		<label for="gender"  required>Gender*</label>
+		<input type="radio"  id="gender_m" name="gender"  required>
+		<label for="gender_m">Male</label>
+		<input type="radio"  id="gender_f" name="gender"  required>Female
+		<label for="gender_f">Female</label>
+		
+		<label for="cars">Car Brands*</label>
+		<select  id="cars" required>
+			<option  value="" disabled selected>--Please choose an option--</option>
+			<option value="BMW">BMW</option>
+			<option value="Audi">Audi</option>
+			<option value="Mercedez">Mercedez</option>
+		</select>
+		
+		<label for="age">Age*</label>
+		<input type="number" id="age" placeholder="age" required>
+		
+		<label for="dob">DOB*</label>
+		<input type="date"  id="dob" required>
+		
+		<label for="phone">Phone Number</label>
+		<input type="tel" placeholder="xxx-xxx-xxxx" id="tel">
+		
+		<label for="password">Password*</label>
+		<input type="password"  id="password " placeholder="password" required>
+		
+		
+		<input type="checkbox" id="tos" required>
+	    <label for="tos" >I agree to the TOS</label>
+		
+		<button type="submit">submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
