--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
 		<input type="text" id="name" placeholder="Name" required>
 		
 		<label for="email">email*</label>
-		<input type="email" placeholder="email" id="email" required>
+		<input type="email" placeholder="Email" id="email" required>
 		
 		<label for="gender"  required>Gender*</label>
 		<input type="radio"  id="gender_m" name="gender"  required>
 		<label for="gender_m">Male</label>
-		<input type="radio"  id="gender_f" name="gender"  required>Female
+		<input type="radio"  id="gender_f" name="gender"  required>
 		<label for="gender_f">Female</label>
 		
 		<label for="cars">Car Brands*</label>
@@ -30,7 +30,7 @@
 		</select>
 		
 		<label for="age">Age*</label>
-		<input type="number" id="age" placeholder="age" required>
+		<input type="number" id="age" placeholder="Age" required>
 		
 		<label for="dob">DOB*</label>
 		<input type="date"  id="dob" required>
@@ -39,7 +39,7 @@
 		<input type="tel" placeholder="xxx-xxx-xxxx" id="tel">
 		
 		<label for="password">Password*</label>
-		<input type="password"  id="password " placeholder="password" required>
+		<input type="password"  id="password " placeholder="Password" required>
 		
 		
 		<input type="checkbox" id="tos" required>
