--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 		<input type="date"  id="dob" required>
 		
 		<label for="phone">Phone Number</label>
-		<input type="tel" placeholder="xxx-xxx-xxxx" id="tel">
+		<input type="tel" id="phone" placeholder="xxx-xxx-xxxx" >
 		
 		<label for="password">Password*</label>
 		<input type="password"  id="password " placeholder="Password" required>
