--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form method="post">
 		<label for="name">Name*</label>
 		<input type="text" id="name" placeholder="Name" required>
 		
@@ -35,8 +35,8 @@
 		<label for="dob">DOB*</label>
 		<input type="date"  id="dob" required>
 		
-		<label for="phone">Phone Number</label>
-		<input type="tel" id="phone" placeholder="xxx-xxx-xxxx" >
+		<label for="tel">Phone Number</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx" >
 		
 		<label for="password">Password*</label>
 		<input type="password"  id="password " placeholder="Password" required>
