--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx" >
 		
 		<label for="password">Password*</label>
-		<input type="password"  id="password " placeholder="Password" required>
+		<input type="password" name="password"  id="password " placeholder="Password" required>
 		
 		
 		<input type="checkbox" id="tos" required>
